# lingominer

./: .gitignore  Dockerfile  README.md  alembic.ini  dockerfile  main.py  mdx_reader.py  pyproject.toml  requirements.txt  requirments.txt
almebic/: env.py  script.py.mako
almebic/versions/: c64981591075_init_db.py
app/: api.py  type.py
app/nlp/: __init__.py  nlp.py  spacy_model.py
demo/: algo.py  dict_reader.ipynb
lingominer/: api.py  app.py  config.py  ctx.py  database.py  exception.py  global_env.py  logger.py  migration.py
lingominer/api/auth/: schemas.py  security.py  views.py
lingominer/api/cards/: chroma.py  flow.py  schema.py  service.py  view.py
lingominer/api/mochi/: schema.py  view.py
lingominer/api/passages/: schemas.py  view.py
lingominer/api/templates/: schema.py  service.py  view.py
lingominer/api/users/: view.py
lingominer/auth/: service.py  view.py
lingominer/base/: context_var.py  database.py  deps.py  oss.py
lingominer/cards/: chroma.py  service.py  view.py
lingominer/core/: context_var.py  database.py  deps.py
lingominer/flow/: algo.py
lingominer/integration/: service.py  view.py
lingominer/mappings/: service.py  view.py
lingominer/mochi/: service.py  view.py
lingominer/models/: __init__.py  card.py  mochi.py  passage.py  template.py  user.py
lingominer/nlp/: __init__.py  azure.py  jina.py  langfuse.py  language.py  openai.py
lingominer/nlp/plugin/: english.py  german.py
lingominer/schemas/: __init__.py  card.py  integration.py  mapping.py  source.py  user.py
lingominer/services/: ai.py  azure.py  azure_speech.py  jina.py  openai.py  oss.py
tests/: conftest.py  test_auth.py  test_cards.py  test_mochi.py  test_passages.py  test_templates.py
